cabal-version:      2.4
build-type:         Simple
name:               effectful
version:            0.1
license:            BSD-3-Clause
license-file:       LICENSE
category:           Control
maintainer:         andrzej@rybczak.net
author:             Andrzej Rybczak
synopsis:           An easy to use, performant extensible effects library.

description: An easy to use, performant extensible effects library with seamless
             integration with the existing Haskell ecosystem. See the main
             module "Effectful" for the documentation.
             .
             This is the "batteries-included" variant with many dependencies;
             See the @<https://hackage.haskell.org/package/effectful-core
             effectful-core>@ package and other @effectful-*@ packages if you
             need a more limited dependency footprint.

extra-source-files: CHANGELOG.md

tested-with: GHC ==8.8.4 || ==8.10.7 || ==9.0.1 || ==9.2.1

bug-reports:   https://github.com/arybczak/effectful/issues
source-repository head
  type:     git
  location: https://github.com/arybczak/effectful.git

flag benchmark-foreign-libraries
    description: Include other effect libraries in the benchmarks.
    default: False

common language
    ghc-options:        -Wall -Wcompat

    default-language:   Haskell2010

    default-extensions: BangPatterns
                        ConstraintKinds
                        DataKinds
                        DeriveFunctor
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        GeneralizedNewtypeDeriving
                        LambdaCase
                        MultiParamTypeClasses
                        NoStarIsType
                        RankNTypes
                        RecordWildCards
                        RoleAnnotations
                        ScopedTypeVariables
                        StandaloneDeriving
                        TupleSections
                        TypeApplications
                        TypeFamilies
                        TypeOperators

library
    import:         language

    build-depends:    base                >= 4.13      && < 5
                    , async               >= 2.2.2
                    , directory           >= 1.3.2
                    , effectful-core      >= 0.1       && < 0.1.1
                    , process             >= 1.6.9
                    , resourcet           >= 1.2.4.3
                    , time                >= 1.9.2
                    , stm                 >= 2.5.0.0
                    , unliftio            >= 0.2.20

    hs-source-dirs:  src

    exposed-modules: Effectful.Concurrent
                     Effectful.Concurrent.Async
                     Effectful.Concurrent.Chan
                     Effectful.Concurrent.MVar
                     Effectful.Concurrent.STM
                     Effectful.Concurrent.QSem
                     Effectful.Concurrent.QSemN
                     Effectful.Environment
                     Effectful.FileSystem
                     Effectful.FileSystem.IO
                     Effectful.Process
                     Effectful.Resource
                     Effectful.Temporary
                     Effectful.Timeout

    other-modules:   Effectful.Concurrent.Effect
                     Effectful.FileSystem.Effect

    reexported-modules:    Effectful
                         , Effectful.Dispatch.Dynamic
                         , Effectful.Dispatch.Static
                         , Effectful.Error
                         , Effectful.Error.Dynamic
                         , Effectful.Fail
                         , Effectful.Monad
                         , Effectful.Prim
                         , Effectful.Reader
                         , Effectful.Reader.Dynamic
                         , Effectful.State.Dynamic
                         , Effectful.State.Local
                         , Effectful.State.Shared
                         , Effectful.Writer.Dynamic
                         , Effectful.Writer.Local
                         , Effectful.Writer.Shared

test-suite test
    import:         language

    ghc-options:    -threaded -rtsopts -with-rtsopts=-N4

    build-depends:    base
                    , containers
                    , effectful
                    , effectful-core
                    , exceptions
                    , lifted-base
                    , tasty
                    , tasty-hunit
                    , unliftio

    hs-source-dirs: tests examples

    type:           exitcode-stdio-1.0
    main-is:        Main.hs

    other-modules:  AsyncTests
                    ConcurrencyTests
                    EnvironmentTests
                    ErrorTests
                    StateTests
                    TimeoutTests
                    UnliftTests
                    Utils
                    -- These are examples; We do not actually run them but list
                    -- them here in order to check if they compile.
                    FileSystem

benchmark bench
    import:         language

    ghc-options:    -threaded -rtsopts -with-rtsopts=-T

    if flag(benchmark-foreign-libraries)
       build-depends: mtl

       if impl(ghc < 9)
          build-depends: freer-simple

       if impl(ghc < 9.2)
          build-depends: fused-effects

       if impl(ghc < 9.2)
          build-depends: polysemy

    build-depends:    base
                    , async
                    , effectful
                    , tasty-bench
                    , unix
                    , unliftio

    hs-source-dirs: bench

    type:           exitcode-stdio-1.0
    main-is:        Main.hs

    other-modules:  Concurrency
                    Countdown
                    FileSizes
                    Unlift
                    Utils
